--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Práctica Fetch</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
     <script src="js/script.js" defer></script>
-    <link href="css/styles.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
-    <h1>Muestra los estudiantes!</h1>
-    <div id="container"></div>
+  <body class="bg-light">
+    <div class="container mt-5">
+      <h1 class="text-center mb-4">Muestra los estudiantes!</h1>
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title">Curso: <span id="course"></span></h2>
+          <p class="card-text">Profesor: <span id="teacher"></span></p>
+        </div>
+      </div>
+      <hr />
+      <div id="container" class="row mt-4"></div>
+    </div>
+
+    <!-- Bootstrap JS y dependencias -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.11/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
